--- a/src/Components/Body/body.css
+++ b/src/Components/Body/body.css
@@ -114,7 +114,7 @@
 }
 
 .arrow-container-container {
-  height: 130px;
+  height: 20px;
 }
 
 .arrow-div-container {
@@ -125,7 +125,7 @@
   display: flex;
   flex-wrap: nowrap;
   margin: auto;
-  height: 400px;
+  height: 200px;
   width: 120%;
   left: -10%;
   right: -10%;
@@ -153,16 +153,16 @@
 
 .slant {
   width: 50%;
-  height: 300px;
+  height: 200px;
   position: absolute;
   bottom: 50%;
 }
 
 .left-slant {
   transform: rotate(5deg);
-  left: 18px;
+  left: 14px;
 }
 .right-slant {
   transform: rotate(-5deg);
-  right: 18px;
+  right: 13px;
 }
