--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: 4em;
+  padding-top: 8rem;
   height: 400px;
   background-color: #1f1f32;
   color: white;
